@@ -427,7 +427,7 @@ class Menu extends Model {
 		$mymenu = array();
 		foreach($menubar as $id => $tags) {
 			/*<a class="ui-login-menubar-a default-icon default-icon-settings fn-login-auth-required <?=$ui_login_user_lock?>" href="<?=FORMPREFIX?>/userinfo/"><span><?=t("menubar_usersettings")?></span></a>*/
-			$mymenu[] = "<a ".$tags["target"]." class='fn-login-dialog-a ".$tags['class']."' href='".$tags['uri']."' name='".$tags['name']."'><div>".t("menubar-link-".$id)."</div></a>";
+			$mymenu[] = "<a ".$tags["target"]." class='fn-menubar-link-$id fn-login-dialog-a ".$tags['class']."' href='".$tags['uri']."' name='".$tags['name']."'><div>".t("menubar-link-".$id)."</div></a>";
 		}
 		return $mymenu;
 	}
